# Fastapi_authentications

./: Diplom.docx  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
JWT_auth/: main.py
JWT_auth/JWT_app/: database.py  models.py  routes.py  tools.py
JWT_auth/templates/: all_users.html  base.html  home.html  login.html  profile.html  register.html
OAuth2_auth/: .env.exemple  main.py
OAuth2_auth/Oauth_app/: config.py  routes.py  tools.py
OAuth2_auth/templates/: base.html  home.html  protected.html
Session_auth/: auth.db  db_config.py  main.py
Session_auth/migrations/: env.py
Session_auth/migrations/versions/: 254a9fb6995c_initial_migration.py
Session_auth/session_app/: cookie_auth.py  database.py  models.py  protected.py  routes.py  session_router.py  tools.py
Session_auth/templates/: all_users.html  base.html  dashboard.html  home.html  login.html  profile.html  register.html
